--- a/src/main/resources/static/css/homepage.css
+++ b/src/main/resources/static/css/homepage.css
@@ -463,6 +463,21 @@
     gap: 12px;
 }
 
+header {
+
+    position: fixed;
+
+    top: 0;
+
+    left: 0;
+
+    width: 100%;
+
+    z-index: 9999;
+
+    background: white;
+}
+
 /* LOGO */
 .logo {
     width: 45px;
